[project]
name = "Conceal_Pass"
version = "0.0.1"
authors = [
    { name="sneekyfoxx", email="sneekyfoxx09@gmail.com" },
]
description = "A package for password input masking"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sneekyfoxx/ConcealPass"
Issues = "https://github.com/sneekyfoxx/ConcealPass/issues"

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
